--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Nov 20 07:29:15 2004  Tim Janik  <timj@gtk.org>
+
+	* bseprobe.cc: shorten probe-queue length to 3 subsequent requests.
+
 Wed Nov 17 01:19:53 2004  Tim Janik  <timj@gtk.org>
 
 	* bseengine.c (bse_engine_constrain): don't align block sizes to
