--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,7 +1,9 @@
 Sat Nov 20 07:29:15 2004  Tim Janik  <timj@gtk.org>
 
-	* bseprobe.cc: shorten probe-queue length to 3 subsequent requests.
-
+	* bseprobe.cc: shorten probe-queue length to 3 subsequent requests,
+	this should be sufficient to account for GUI scope request jitter
+	of approximately 1 block in size.
+	
 Wed Nov 17 01:19:53 2004  Tim Janik  <timj@gtk.org>
 
 	* bseengine.c (bse_engine_constrain): don't align block sizes to
