use gxk_menu_attach_as_submenu() for proper submenu handling. allow
Sat Nov 20 12:43:15 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstmenus.c: use gxk_menu_attach_as_submenu() for proper
        submenu handling. allow creation of empty menus.

        * beast-gtk/bstmenus.h: allow icons for submenu items.

        * beast-gtk/bstsnetrouter.c: implemented output signal submenu.

        * beast-gtk/icons/signal.png:
        * beast-gtk/icons/signal.xcf: new icons.

svn path=/trunk/; revision=2834

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+FIXME(release-critical):
+- implement Monitor Output Signal dialog
 TODO:
 - test engine block size changes (Subject: blocksize vs. cpu)
 - probes only need to deliver (sample frames) 25 times per second, and need not be continuous
