--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,10 @@
+Tue Nov 23 16:25:05 2004  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.h (g_static_assert): g++-3.4 doesn't accept structure casts
+	in constant expressions (e.g. G_STRUCT_OFFSET (GPollFD, fd) == 
+	G_STRUCT_OFFSET (struct pollfd, fd)), so implement static_assert() via
+	negative array sizes.
+
 Mon Nov 15 20:10:06 2004  Tim Janik  <timj@gtk.org>
 
 	* sfitime.c (sfi_time_from_string_err): fixed up mktime() usage by
