--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov 26 16:17:05 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstknob.[hc]: cleanups.
+
 Sat Nov 20 12:43:15 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstmenus.c: use gxk_menu_attach_as_submenu() for proper 
