--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Nov 26 20:52:03 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstscrollgraph.[hc]: request and draw probed sample data.
+
+	* beast-gtk/bstsnetrouter.c: setup source and ochannel on scrollgraphs.
+
 Fri Nov 26 19:14:00 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstscrollgraph.[hc]: paint testpattern.
