--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Nov 27 20:02:04 2004  Tim Janik  <timj@gtk.org>
+
+	* engine-mplan.txt: * reflect renames in the code base
+
 Sat Nov 27 18:57:11 2004  Tim Janik  <timj@gtk.org>
 
 	* bsepcmwriter.c (bse_pcm_writer_open): truncate .wav files when 
