--- a/drivers/bse-portaudio/ChangeLog
+++ b/drivers/bse-portaudio/ChangeLog
@@ -1,3 +1,12 @@
+Tue Nov 30 10:30:51 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsepcmdevice-portaudio.cc: Since the driver class is called
+	PortAudio, adapted the function names from portaudio_ to port_audio_*. 
+	Lowered the driver rating to _FALLBACK, to prefer the native BEAST
+	drivers for OSS and ALSA. Minor cleanups.
+
+	* configure.in: Minor cleanup.
+
 Sun Nov 28 16:20:25 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bsepcmdevice-portaudio.cc: Added support "rw", "ro" and "wo" options
