--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Dec  3 13:45:46 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/dialogs/radgets-standard.xml: support vruler and hruler types.
+
+	* beast-gtk/gxk/gxkradget.c: register GtkHRuler and GtkVRuler types.
+
 Tue Nov 30 21:45:54 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstscrollgraph.[hc]: support adjustment of scrolling
