--- a/TODO
+++ b/TODO
@@ -12,6 +12,10 @@ FIXME(release-critical):
   implement time parser for this in beast, merge with travelad parser
 - driver interface: support multilpe MIDI channels
 - popdown scrollgraph on ::release
+- menu button: keep the popup menu *onscreen*, even if the button is partially offscreen
+- add Left and Right channels to BseAmplifier to allow stereo amplification
+- add: /demo/simple/stereo pipe
+       /demo/simple/MIDI piano
 TODO:
 - support various fft windows for fft probes
 - implement float-ffts
