--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Fri Dec  3 15:50:31 2004  Tim Janik  <timj@gtk.org>
+
+	* sfitypes.c (sfi_choice_match_detailed): always match on word 
+	boundary only.
+
 Tue Nov 23 16:25:05 2004  Tim Janik  <timj@gtk.org>
 
 	* glib-extra.h (g_static_assert): g++-3.4 doesn't accept structure casts
