--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Fri Dec  3 15:51:48 2004  Tim Janik  <timj@gtk.org>
+
+	* shell/bsescminterp.c (bse_scm_choice_match): implement in terms
+	of sfi_choice_match_detailed().
+
+	* shell/bse-scm-glue.boot: implement bse-test-error with 
+	bse-choice-match?.
+
 Fri Dec  3 13:45:46 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/dialogs/radgets-standard.xml: support vruler and hruler types.
