--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Dec  3 16:59:29 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/scripts/waveloadtest.scm: Don't leak memory.
+
 Fri Dec  3 16:56:36 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* configure.in:
