--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Mon Dec  6 22:47:00 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bseplugin.h: To allow implementing C-style plugins in C++ sources,
+	as required for the PortAudio driver, declare extern "C" linkage for
+	the symbol defined by BSE_DEFINE_EXPORTS when compiled within a C++
+	source. The extern "C" code was taken from bsecxxplugin.h.
+
 Fri Dec  3 21:31:26 2004  Tim Janik  <timj@gtk.org>
 
 	* bsewaverepo.proc: don't override detailed errors.
