--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Mon Dec  6 23:46:11 2004  Tim Janik  <timj@gtk.org>
+
+	* bseprobe.cc: block-size computation fixups. this fixes ffts beyond
+	block boundaries.
+
 Mon Dec  6 22:47:00 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bseplugin.h: To allow implementing C-style plugins in C++ sources,
