changed arrow outline color from blue to black.
Fri Dec 10 12:18:41 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstcanvaslink.c (bst_canvas_link_build_async): changed
        arrow outline color from blue to black.

svn path=/trunk/; revision=2892

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXME(release-critical):
+- fix probes for multi-module objects
 - (beast:29238): BEAST-CRITICAL **: file bstutils.c: line 802 (bst_gmask_set_aux2): assertion `GTK_IS_WIDGET (widget)' failed
 - menu-button should keep scroll position if screen edge distance is > 2*menuitem.height + 2*scrollarrow
 - bseprocidl: generate "Info blurb" not "Info BLURB"
