--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Dec 10 12:18:41 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstcanvaslink.c (bst_canvas_link_build_async): changed 
+	arrow outline color from blue to black.
+
 Fri Dec 10 11:29:58 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstparam.c: provide proper warning if scale/dial widget 
