--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Fri Dec 10 15:24:35 2004  Tim Janik  <timj@gtk.org>
+
+	* bseautodoc.c: fixed bugs, print out signals. print out
+	all BSE objects.
+
+	* bseprobe.idl, bseprobe.cc: deliver mix frequency with probes.
+
 Mon Dec  6 23:46:11 2004  Tim Janik  <timj@gtk.org>
 
 	* bseprobe.cc: block-size computation fixups. this fixes ffts beyond
