--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Dec 11 15:34:43 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstscrollgraph.c: don't hide-on-delete the window, to stop
+	probing for closed windows.
+
 Fri Dec 10 15:08:07 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstscrollgraph.[hc]: adapt to mix frequency changes.
