--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Sun Dec 12 19:38:22 2004  Tim Janik  <timj@gtk.org>
+
+	* bsewave.header: CVS copied from gslwave.header.
+
+	* gslloader-bsewave.c: CVS copied from gslloader-gslwave.c.
+
 Sun Dec 12 18:55:36 2004  Tim Janik  <timj@gtk.org>
 
 	* bseenginemaster.c:
